feat: update seeder
